--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server":"json-server server.json -p 5000 -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "json-server": "^0.17.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
