--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server":"json-server server.json -p 5000 -w -d 500",
+    "dev:server": "json-server server.json -p 5000 -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.8"
+    "react-hook-form": "^7.43.4",
+    "styled-components": "^5.3.8",
+    "zod": "^3.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
