--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "dev:server": "json-server server.json -p 5000 -w -d 500",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint":"npx eslint src --ext .tsx,.ts",
+    "lint:fix":"npx eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
@@ -23,10 +25,12 @@
     "zod": "^3.21.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.35.0",
     "json-server": "^0.17.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
